[gd_scene load_steps=5 format=3 uid="uid://belejvi2ji5n"]

[ext_resource type="Texture2D" uid="uid://b1yt5mgd5mds7" path="res://screens/game_screen/game_progress_line/assets/progressmeter_back.png" id="1_addbq"]
[ext_resource type="Script" path="res://screens/game_screen/game_progress_line/game_progress_line.gd" id="1_b7d4l"]
[ext_resource type="Texture2D" uid="uid://c8aifexf3m3bs" path="res://screens/game_screen/game_progress_line/assets/progressmeter_front.png" id="2_mjgu0"]
[ext_resource type="Texture2D" uid="uid://bmxt1qi6a780v" path="res://screens/game_screen/game_progress_line/assets/nazi_head_icon.png" id="4_myl2a"]

[node name="GameProgressLine" type="Control"]
layout_mode = 3
anchor_right = 0.409
anchor_bottom = 0.056
offset_right = 8.71997
offset_bottom = 9.52
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7d4l")

[node name="LineTextureBack" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 792.0
offset_bottom = 48.0
texture = ExtResource("1_addbq")

[node name="LineTextureFront" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 13.0
offset_right = 767.0
offset_bottom = 36.0
texture = ExtResource("2_mjgu0")
expand_mode = 2

[node name="NaziHeadTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 710.0
offset_top = -20.0
offset_right = 792.0
offset_bottom = 71.0
texture = ExtResource("4_myl2a")
